[tool.poetry]
name = "aiokeycloak"
version = "0.0.2"
description = ""
authors = ["GLEF1X <glebgar567@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
aiohttp = "^3.8.1"
python-jose = "^3.3.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-anyio = "^0.0.0"
pytest-asyncio = "^0.18.3"
trio = "^0.21.0"
testcontainers = "*"
mypy = "^0.961"
python-keycloak = "*"
bump2version = "^1.0.1"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = [
    "aiofiles",
    "aiohttp",
    "aiohttp_socks",
    "aresponses",
    "packaging",
    "pkg_resources",
    "pydantic",
    "pytest"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
